--- a/import-model/index.html
+++ b/import-model/index.html
@@ -17,14 +17,14 @@
     </a-assets>
 
     <a-circle id="floor" position="-0.4 -0.76 -25" rotation="-90 0 0" radius="100" shadow="receive: true" visible="true"
-      color="white"></a-circle>
+      color="grey"></a-circle>
 
     <a-box color="blue" positon="0.076 -4 -39" width="50" height="50"></a-box>
     <a-box color="blue" rotation="0 -90 0" position="25 -2.9 15" width="50" height="50"></a-box>
     <a-box color="blue" rotation="0 -90 0" position="-25 -2.9 15" width="50" height="50"></a-box>
     <a-box color="blue" rotation="90 0 0" position="0 21 15" width="50" height="50"></a-box>
 
-    <a-entity obj-model="obj: #table-obj; mtl: #table-mtl" position="0 0 7" rotation="-90 40 0" scale="0.1 0.1 0.1">
+    <a-entity obj-model="obj: #table-obj; mtl: #table-mtl" position="0 0 7" rotation="-90 40 0" scale="0.14 0.14 0.14">
     </a-entity>
 
 
