--- a/creating-components/index.html
+++ b/creating-components/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <a-scene background="color: grey">
-    <a-box position="0 1 -3" move="speed: 0.01"></a-box>
+    <a-box color="blue" position="0 1 -3" move="speed: 0.01"></a-box>
 
   </a-scene>
 </body>
