--- a/robot/index.html
+++ b/robot/index.html
@@ -14,14 +14,32 @@
     <a-camera position="0 0 10" wasd-controls="wsAxis: y; wsInverted: true"></a-camera>
     <!-- <a-camera position="0 0 10"></a-camera> -->
     <a-plane color="grey" height="10" width="10" position="0 -4 0" rotation="-90 0 0"></a-plane>
-    <a-box position="0 0 0" color="blue" width="5" height="5"></a-box>
-    <a-sphere position="1 1 0" color="white"></a-sphere>
-    <a-sphere position="-1 1 0" color="white"></a-sphere>
-    <a-sphere position="1 1 0.7" color="black" scale="0.5 0.5 0.5"></a-sphere>
-    <a-sphere position="-1 1 0.7" color="black" scale="0.5 0.5 0.5"></a-sphere>
-    <a-box position="0 -1 0.5" width="2"></a-box>
-    <a-cone position="0 -2 -1" scale="2 4 2" color="red"></a-cone>
-    
+    <a-entity position="0 6 0">
+      <a-box position="0 0 0" color="blue" width="5" height="5"></a-box>
+      <a-sphere position="1 1 0" color="white"></a-sphere>
+      <a-sphere position="-1 1 0" color="white"></a-sphere>
+      <a-entity position="1 1 0.7" rotation="0 0 0"
+        animation="property: rotation; to: 0 0 360; easing: linear; loop: true; dur: 1000">
+        <a-sphere position="0 0.2 0" color="black" scale="0.5 0.5 0.5"></a-sphere>
+      </a-entity>
+      <a-entity position="-1 1 0.7" rotation="0 0 0"
+        animation="property: rotation; to: 0 0 -360; easing: linear; loop: true; dur: 500">
+        <a-sphere position="0 0.2 0" color="black" scale="0.5 0.5 0.5"></a-sphere>
+      </a-entity>
+      <!-- <a-sphere position="-1 1 0.7" color="black" scale="0.5 0.5 0.5"></a-sphere> -->
+      <a-box position="0 -1 0.5" width="2"></a-box>
+    </a-entity>
+    <a-entity>
+      <a-box position="0 0 -0.5" scale="6 6 2" color="red"></a-box>
+    </a-entity>
+    <a-entity>
+      <a-cylinder position="-1 -3.5 0" color="green" scale="1 1.3 1"></a-cylinder>
+      <a-cylinder position="1 -3.5 0" color="green" scale="1 1.3 1"></a-cylinder>
+    </a-entity>
+    <a-entity>
+      <a-cylinder position="4 1.5 0" color="purple" height="3" rotation="0 0 45" radius="0.6"></a-cylinder>
+      <a-cylinder position="-4 1.5 0" color="purple" height="3" rotation="0 0 -45" radius="0.6"></a-cylinder>
+    </a-entity>
   </a-scene>
 </body>
 
