airplane - collision detection

--- a/airplane/index.html
+++ b/airplane/index.html
@@ -5,9 +5,12 @@
 
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
 
   <script src="./components/Rotation.js"></script>
   <script src="./components/Target.js"></script>
+  <script src="./components/Collider.js"></script>
   <script src="./components/Bird.js"></script>
 
 </head>
@@ -35,8 +38,8 @@
     </a-entity>
 
     <!-- Plane -->
-    <a-entity id="plane_model" gltf-model="#plane" position="0 0 15" scale="1 1" rotation="0 90 0"
-      plane-rotation-reader>
+    <a-entity id="plane_model" gltf-model="#plane" position="0 0 15" scale="1 1" rotation="0 90 0" plane-rotation-reader
+      dynamic-body="mass: 0" gameplay>
     </a-entity>
 
   </a-scene>
