--- a/customcar/index.html
+++ b/customcar/index.html
@@ -7,25 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Car</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <style>
-    p {
-      position: absolute;
-      font-family: 'Courier New', Courier, monospace;
-      text-align: center;
-      font-size: 20px;
-      font-weight: 600;
-    }
-
-    .credit {
-      top: 0
-    }
-
-    .source {
-      bottom: 0
-    }
-  </style>
-
   <script src="Car.js"></script>
+
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
