--- a/airplane/index.html
+++ b/airplane/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+
   <script
     src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
 
@@ -12,13 +13,10 @@
   <script src="./components/Target.js"></script>
   <script src="./components/Collider.js"></script>
   <script src="./components/Bird.js"></script>
-
 </head>
 
 <body>
-
-  <a-scene background="color:#026F90">
-
+  <a-scene background="color:#026F90" physics="debug: true">
     <a-entity id="look" look-controls camera position="0 2 20"></a-entity>
 
     <!--Asset Management-->
@@ -26,55 +24,51 @@
       <a-asset-item id="terrainMap" src="./assets/models/terrain/scene.gltf"></a-asset-item>
 
       <a-asset-item id="plane" src="./assets/models/airplane/scene.gltf"></a-asset-item>
-
-      <a-asset-item id="bird" src="./assets/models/flying_bird/scene.gltf"></a-asset-item>
-
     </a-assets>
 
     <!-- Terrain  -->
-    <a-entity id="terrain" gltf-model="#terrainMap" position="0 0 0" scale="0.3 0.3 0.3"
+    <a-entity id="terrain" gltf-model="#terrainMap" position="0 0 -100" scale="0.3 0.3 0.3"
       animation="property: position; to: 0 0 1000;easing:linear; loop: true; dur: 150000" terrain-rotation-reader
       target-ring flying-birds>
     </a-entity>
 
     <!-- Plane -->
-    <a-entity id="plane_model" gltf-model="#plane" position="0 0 15" scale="1 1" rotation="0 90 0" plane-rotation-reader
-      dynamic-body="mass: 0" gameplay>
+    <a-entity id="plane_model" gltf-model="#plane" position="0 0 15" scale="1 1 1" rotation="0 90 0"
+      plane-rotation-reader dynamic-body="mass:0" game-play>
     </a-entity>
 
+    <!-----------------------------------Game Timer and Score------------------------------------------>
     <a-entity id="header" position="1 -4 0">
-      <a-entity position="-28 21.5 0"
-        text="font: exo2bold; align: center; width: 45; color: black; value: VIRTUAL FLIGHT">
+      <!-- Title -->
+      <a-entity position="-28.5 21.5 0"
+        text="font: exo2bold; align: center; width: 40; color: black; value: VIRTUAL FLIGHT"></a-entity>
+
+      <!-- Timer -->
+      <a-entity position="-23.5 19.3 0">
+        <a-entity position="-1.5 0.07 0" text="font: aileronsemibold; width: 12; color: black; value: TIME\nREMAINING">
+        </a-entity>
+        <a-entity id="timer" position="-9.8 0.3 0"
+          text="font: exo2bold; align: center; width: 30; color: black; value: 00:00"></a-entity>
+      </a-entity>
+
+      <!-- Target Status -->
+      <a-entity position="-18 19.3 0">
+        <a-entity position="-0.6 0.13 0"
+          text="font: aileronsemibold; width: 12; color: black; value: TARGETS\nREMAINING"></a-entity>
+        <a-entity id="targets" position="-8 0.3 0"
+          text="font: exo2bold; align: center; width: 30; color: black; value: 20"></a-entity>
+      </a-entity>
+
+      <!-- Score -->
+      <a-entity position="30.5 21.5 0">
+        <a-entity position="" text="font: exo2bold; align: center; width: 40; color: black; value: SCORE"></a-entity>
+        <a-entity id="score" position="0 -2 0" text="font: exo2bold; align: center; width: 40; color: black; value: 0">
+        </a-entity>
       </a-entity>
     </a-entity>
-    <a-entity position="-23.5 19.3 0">
-      <a-entity position="-1 -4.07 0" text="font: aileronsemibold; width: 10; value: TIME\nREMAINING; color: black">
-      </a-entity>
-      <a-entity id="timer" position="-8 -4 0"
-        text="font: exo2bold; align: center; width: 30; color: black; value: 00:00">
-      </a-entity>
-    </a-entity>
 
-    <a-entity position="-20 19 0">
-
-      <a-entity position="0 -4 0" text="font: aileronsemibold; width: 10; color: black; value: TARGETS\nREMAINING;">
-      </a-entity>
-
-      <a-entity id="targets" position="8 -4 0" text="font: exo2bold; width: 30; color: black; value: 20;">
-      </a-entity>
-    </a-entity>
-
-    <a-entity position="28 19 0">
-      <a-entity position="0 -2 0" text="font: exo2bold; value: SCORE; align: center; width: 30; color: black">
-      </a-entity>
-      <a-entity id="score" position="0 -4 0" text="font: exo2bold; color: black; value: 0; align: center; width: 30;">
-      </a-entity>
-    </a-entity>
-
-    <a-entity id="gameover" visible="false" position="0 0 0"
-      text="font: exo2bold; align: center; color: blue; value: GAME OVER; width: 60">
-    </a-entity>
-
+    <a-entity id="game_over_text" position="0 7.5 0"
+      text="font: exo2bold; align: center; width: 100; color: white;value: Game Over!!!" visible="false"></a-entity>
   </a-scene>
 </body>
 
