--- a/customcar-v2/index.html
+++ b/customcar-v2/index.html
@@ -21,19 +21,21 @@
     <a-entity rotation="0 -90 0" position="-10 0 -10">
       <a-cylinder color="blue" position="0 0 -10" radius="8" height="0.5"></a-cylinder>
       <a-entity position="19 20.69 -7.486">
-
         <a-entity car id="#car"
           gltf-model="https://raw.githubusercontent.com/whitehatjr/PRO-VR-C152/main/assets/car/scene.gltf"
-          position="-16.7 -16.5 -3" scale="0.05 0.05 0.05">
+          position="-16.7 -18.4 -3" scale="0.05 0.05 0.05" rotation="0 180 0">
         </a-entity>
       </a-entity>
     </a-entity>
 
+    <a-entity geometry="primitive: rectangle; width: 30; height: 20; color: green">
+      <a-text text="value: CHANGE VIEW; align: center; width: 10; color: blue"></a-text>
+    </a-entity>
+
   </a-scene>
   <div style="display: flex; justify-content: center;">
-
     <p class="source">
-      View Source Code on GitHub <br> <a href="https://github.com/dipamsen/AFrame-3D/tree/main/customcar">dipamsen /
+      View Source Code on GitHub <br> <a href="https://github.com/dipamsen/AFrame-3D/tree/main/customcar-v2">dipamsen /
         AFrame-3D</a>
     </p>
   </div>
