--- a/shooter/index.html
+++ b/shooter/index.html
@@ -39,17 +39,21 @@
     </a-plane>
 
     <!--Boxes-->
-    <a-box position="-2 1.5 -10" color="tomato" depth="1" height="1" width="1"></a-box>
+    <a-box id="box1" position="-2 1.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
+    <a-box id="box2" position="0 1.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
+    <a-box id="box3" position="2 1.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
+    <a-box id="box4" position="-1 2.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
+    <a-box id="box5" position="1 2.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
+    <a-box id="box6" position="0 3.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
 
-    <a-box position="0 1.5 -10" color="tomato" depth="1" height="1" width="1"></a-box>
-
-    <a-box position="2 1.5 -10" color="tomato" depth="1" height="1" width="1"></a-box>
-
-    <a-box position="-1 2.5 -10" color="tomato" depth="1" height="1" width="1"></a-box>
-
-    <a-box position="1 2.5 -10" color="tomato" depth="1" height="1" width="1"></a-box>
-
-    <a-box position="0 3.5 -10" color="tomato" depth="1" height="1" width="1"></a-box>
+    <!-- Walls -->
+    <a-box id="wall1" color="green" depth="1" height="50" width="10" static-body position="-20 1.5 -20"></a-box>
+    <a-box id="wall2" color="green" depth="1" height="50" width="10" static-body position="0 1.5 -20"></a-box>
+    <a-box id="wall3" color="green" depth="1" height="50" width="10" static-body position="20 1.5 -20"></a-box>
+    <a-box id="wall4" color="green" depth="1" height="50" width="10" opacity="0.5" position="-10 1.5 -20"></a-box>
+    <a-box id="wall5" color="green" depth="1" height="50" width="10" opacity="0.5" position="10 1.5 -20"></a-box>
+    <a-box id="wall6" color="green" depth="1" height="50" width="10" opacity="0.5" position="-30 1.5 -20"></a-box>
+    <a-box id="wall7" color="green" depth="1" height="50" width="10" opacity="0.5" position="30 1.5 -20"></a-box>
   </a-scene>
 </body>
 
