--- a/shooter/index.html
+++ b/shooter/index.html
@@ -6,8 +6,12 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script
     src="https://cdn.jsdelivr.net/gh/n5ro/aframe-physics-system@v4.0.1/dist/aframe-physics-system.min.js"></script>
+  <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
+
 
   <script src="components/Bullet.js"></script>
+
+  <script src="GameObjects.js"></script>
 
 </head>
 
@@ -17,6 +21,9 @@
     <!--Assets-->
     <a-assets>
       <a-asset id="shooter" src="./models/shooter/gun.gltf"></a-asset>
+      <a-asset id="fence" src="./models/fence/scene.gltf"></a-asset>
+      <audio id="footstep" src="./sounds/footStep.mp3"></audio>
+      <audio id="shoot" src="./sounds/shoot.mp3"></audio>
     </a-assets>
 
     <!--Light-->
@@ -30,6 +37,9 @@
       <a-cursor></a-cursor>
     </a-entity>
 
+    <!-- Wired Fence -->
+    <a-entity wire-fence boxes></a-entity>
+
     <!--Bullets-->
     <a-entity bullets></a-entity>
 
@@ -37,23 +47,28 @@
     <a-plane id="ground" repeat="5 5" position="0 1 0" rotation="-90 0 0" height="200" width="200" color="#FBF2D4"
       static-body visible="true">
     </a-plane>
-
-    <!--Boxes-->
+    <!-- 
+Boxes
     <a-box id="box1" position="-2 1.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
     <a-box id="box2" position="0 1.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
     <a-box id="box3" position="2 1.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
     <a-box id="box4" position="-1 2.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
     <a-box id="box5" position="1 2.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
-    <a-box id="box6" position="0 3.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box>
-
+    <a-box id="box6" position="0 3.5 -10" color="tomato" depth="1" height="1" width="1" dynamic-body></a-box> -->
+    -->
     <!-- Walls -->
-    <a-box id="wall1" color="green" depth="1" height="50" width="10" static-body position="-20 1.5 -20"></a-box>
+    <!-- <a-box id="wall1" color="green" depth="1" height="50" width="10" static-body position="-20 1.5 -20"></a-box>
     <a-box id="wall2" color="green" depth="1" height="50" width="10" static-body position="0 1.5 -20"></a-box>
     <a-box id="wall3" color="green" depth="1" height="50" width="10" static-body position="20 1.5 -20"></a-box>
     <a-box id="wall4" color="green" depth="1" height="50" width="10" opacity="0.5" position="-10 1.5 -20"></a-box>
     <a-box id="wall5" color="green" depth="1" height="50" width="10" opacity="0.5" position="10 1.5 -20"></a-box>
     <a-box id="wall6" color="green" depth="1" height="50" width="10" opacity="0.5" position="-30 1.5 -20"></a-box>
-    <a-box id="wall7" color="green" depth="1" height="50" width="10" opacity="0.5" position="30 1.5 -20"></a-box>
+    <a-box id="wall7" color="green" depth="1" height="50" width="10" opacity="0.5" position="30 1.5 -20"></a-box> -->
+
+    <a-entity id="sound1" sound="src: #footstep; poolsize: 2; autoplay: false; volume: 4; loop: false"></a-entity>
+    <a-entity id="sound2" sound="src: #shoot; poolsize: 2; autoplay: false; volume: 1; loop: false"></a-entity>
+
+    <a-entity id="environment" environment="preset: egypt; skyType: gradient; lighting: point"></a-entity>
   </a-scene>
 </body>
 
