readme with link

--- a/toy-store/index.html
+++ b/toy-store/index.html
@@ -24,7 +24,7 @@
     <a-assets>
       <a-asset-item id="crane-model" src="./assets/models/crane/scene.gltf"></a-asset-item>
     </a-assets>
-    <a-marker id="crane-marker" type="pattern" url="assets/patterns/pattern-crane.patt" cursor="rayOrigin: mouse">
+    <a-marker id="crane-marker" type="pattern" url="./assets/patterns/pattern-crane.patt" cursor="rayOrigin: mouse">
       <a-entity id="crane-3D-model" position="-2.3 0 0.5" rotation="-90 0 0" scale="5 5 5" gltf-model="#crane-model"
         gesture-handler animation-mixer>
       </a-entity>
